Fixing styles and layout bug

--- a/src/components/category/category.module.scss
+++ b/src/components/category/category.module.scss
@@ -5,6 +5,8 @@
   flex-direction: row;
   gap: 0.3rem;
   color: $default-yellow;
+  margin-bottom: 1.5rem;
+  align-items: center;
 }
 
 .styledIcon {
